--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,22 @@
 html {
+  background-color: rgba(236, 236, 236, 0.74);
   height: 100%;
 }
 
 body h2 {
   text-align: center;
-  font-size: 5em;
+  font-size: 3em;
+  font-family: "Heebo", sans-serif;
 }
 body form {
   width: 30em;
   margin: 0 auto;
   text-align: left;
   padding: 2.5em;
-  background-color: #e0e0e0;
+  background-color: rgba(157, 255, 206, 0.4745098039);
   border-radius: 0.625em;
+  font-family: "Libre Baskerville", serif;
+  text-align: center;
 }
 body form label {
   font-weight: bold;
@@ -31,15 +35,19 @@ body form button[type=submit] {
   width: 100%;
   margin-top: 1.25em;
   padding: 0.625em;
-  background-color: #2196f3;
-  color: white;
+  background-color: rgba(248, 175, 126, 0.4509803922);
+  color: black;
   border-radius: 5px;
   border: none;
   font-weight: bold;
   cursor: pointer;
 }
 body #input_comment {
-  padding-top: 10em;
+  width: 100%;
+  resize: none;
+}
+body #label_comment {
+  padding-bottom: 0.5em;
 }
 
 @media (max-width: 720px) {
